--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,7 @@ posts.sort((a, b) => a.data.date.getTime() - b.data.date.getTime());
                 cover={post.data.cover}
                 image={post.data.image}
                 text_theme={post.data.text_theme}
+                layout_style={post.data.layout_style}
             />
         ))}
         
